// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`alt.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[IMAGE-reference]: a.png
[   IMAGE reference with \`\`backtick\`\`   ]: a.png
[   IMAGE reference with \`\`backtick \`   ]: a.png

<!-- backtick -->
- ![   IMAGE alt with \`\`backtick\`\`   ](a.png)
- ![   IMAGE alt with \`\`backtick \`   ](a.png)
- ![   IMAGE reference alt with \`\`backtick\`\`   ][IMAGE-reference]
- ![   IMAGE reference alt with \`\`backtick \`   ][IMAGE-reference]
- ![   IMAGE reference with \`\`backtick\`\`   ][]
- ![   IMAGE reference with \`\`backtick \`   ][]

<!-- square brackets -->
- ![   IMAGE alt with [ square brackets ]   ](a.png)
- ![   IMAGE alt with [[square brackets]]   ](a.png)
- ![   IMAGE alt with [ square brackets ]   ][IMAGE-reference]
- ![   IMAGE alt with [[square brackets]]   ][IMAGE-reference]

=====================================output=====================================
[IMAGE-reference]: a.png
[ IMAGE reference with \`\`backtick\`\` ]: a.png
[ IMAGE reference with \`\`backtick \` ]: a.png

<!-- backtick -->

- ![   IMAGE alt with \`\`backtick\`\`   ](a.png)
- ![   IMAGE alt with \`\`backtick \`   ](a.png)
- ![   IMAGE reference alt with \`\`backtick\`\`   ][IMAGE-reference]
- ![   IMAGE reference alt with \`\`backtick \`   ][IMAGE-reference]
- ![ IMAGE reference with \`\`backtick\`\` ][]
- ![ IMAGE reference with \`\`backtick \` ][]

<!-- square brackets -->

- ![   IMAGE alt with [ square brackets ]   ](a.png)
- ![   IMAGE alt with [[square brackets]]   ](a.png)
- ![   IMAGE alt with [ square brackets ]   ][IMAGE-reference]
- ![   IMAGE alt with [[square brackets]]   ][IMAGE-reference]

================================================================================
`;

exports[`simple.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
![hello](http://example.com/image.png)

=====================================output=====================================
![hello](http://example.com/image.png)

================================================================================
`;

exports[`title.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
![hello](http://example.com/image.png "title")

=====================================output=====================================
![hello](http://example.com/image.png "title")

================================================================================
`;
